--- a/Front-End/src/app/app.html
+++ b/Front-End/src/app/app.html
@@ -1,10 +1,10 @@
 <header>
-  <nav style="background-color: blue;
-  display: flex;padding: 10px;gap: 2rem; align-items: center;">
-    <a routerlink="/" style="color: aliceblue;">Início</a>
-    <a routerlink="/autores" style="color: aliceblue;">Autores</a>
-    <a routerlink="/editoras" style="color: aliceblue;">Editoras</a>
-    <a routerlink="/livros" style="color: aliceblue;">Livros</a>
+  <nav style="background-color: #E6E6FA;
+  display: flex; padding: 10px;gap: 2rem; align-items: center; border-radius: 7px;>
+    <a routerlink="/" style="color: #FFFFFF;">Início</a>
+    <a routerlink="/autores" style="color: #FFFFFF;">Autores</a>
+    <a routerlink="/editoras" style="color: #FFFFFF;">Editoras</a>
+    <a routerlink="/livros" style="color: #FFFFFF;">Livros</a>
     <button style="cursor: pointer;">Sair</button>
   </nav>
 </header>
