--- a/Front-End/src/app/app.html
+++ b/Front-End/src/app/app.html
@@ -1,11 +1,12 @@
 <header>
-  <nav style="background-color: #E6E6FA;
-  display: flex; padding: 10px;gap: 2rem; align-items: center; border-radius: 7px;>
-    <a routerlink="/" style="color: #FFFFFF;">Início</a>
-    <a routerlink="/autores" style="color: #FFFFFF;">Autores</a>
-    <a routerlink="/editoras" style="color: #FFFFFF;">Editoras</a>
-    <a routerlink="/livros" style="color: #FFFFFF;">Livros</a>
-    <button style="cursor: pointer;">Sair</button>
+  <nav style="background-color: #008000;
+              display: flex; border-radius: 9px; padding: 10px; gap: 2rem; align-items: center; font-family: Arial, Helvetica, sans-serif;">
+    <a routerlink="/" style="cursor: pointer; color: #f0f8ff;">Início</a>
+    <a routerlink="/autores" style="cursor: pointer; color: #f0f8ff;">Autores</a>
+    <a routerlink="/editoras" style="cursor: pointer; color: #f0f8ff;">Editoras</a>
+    <a routerlink="/livros" style="cursor: pointer; color: #f0f8ff;">Livros</a>
+    <button style="cursor: pointer; border-radius: 5px;">Sair</button>
   </nav>
 </header>
+
 <main><router-outlet></router-outlet></main>
